Refining some services